--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,19 @@
 
 @import "{{ site.theme }}";
 
-
 .site-footer {display: none;}
+
+a[href*=youtube]::after{
+  content:"Watch video";
+  display:block;
+}
 
 @media screen and (min-width: 64em)
 {
   .page-header {padding:2rem 6rem;}
+}
+
+@media screen and (min-width: 80em)
+{
+  .main-content {max-width: 80rem;}
 }
