--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,9 +10,12 @@ a[href*=youtube]::after{
   display:block;
 }
 
-@media screen and (min-width: 64em)
-{
-  .page-header {padding:2rem 6rem;}
+.page-header{
+  color:#fff;
+  text-align:center;
+  background-color:#343a40!important;
+  background-image:none;
+  padding:8px 16px;
 }
 
 @media screen and (min-width: 80em)
