--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <header class="page-header" role="banner">
     <table>
       <tr>
-        <td><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
+        <td style="padding-left:16px;"><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
         <td><h2 class="project-tagline">{{ page.title | default: site.title | default: site.github.repository_name }}</h2></td>
       </tr>
     </table>
