--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
   <header class="page-header" role="banner">
     <table>
       <tr>
-        <td style="padding-left:16px;"><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
-        <td><h2 class="project-tagline">{{ page.title | default: site.title | default: site.github.repository_name }}</h2></td>
+        <td><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
+        <td style="padding-left:25px;"><h1 style="margin-top:7px">{{ page.title | default: site.title | default: site.github.repository_name }}</h1></td>
       </tr>
     </table>
   </header>
