--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <table>
       <tr>
         <td><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
-        <td style="padding-left:25px;"><h1 style="margin-top:7px">{{ page.title | default: site.title | default: site.github.repository_name }}</h1></td>
+        <td style="padding-left:25px;"><h1 style="margin-top:7px">Support</h1></td>
       </tr>
     </table>
   </header>
