--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
 <body>
   <a id="skip-to-content" href="#content">Skip to the content.</a>
   <header class="page-header" role="banner">
-    <table>
+    <table style="width:100%">
       <tr>
-        <td><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
-        <td style="padding-left:25px;"><h1 style="margin-top:7px">Support</h1></td>
+        <td style="text-align:left"><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
+        <td style="text-align:right"><h1 style="margin-top:7px;font-size:24px;">SignPresenter Support</h1></td>
       </tr>
     </table>
   </header>
