--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta property="og:image" content="https://support.signpresenter.com/assets/og-logo.png" />
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   {% include head-custom.html %}
 </head>
@@ -20,7 +21,9 @@
     <table style="width:100%">
       <tr>
         <td style="text-align:left"><img src="https://signpresenter.com/images/logo.png" style="padding-top:0px;padding-bottom:0px;"></td>
-        <td style="text-align:right"><h1 style="margin-top:7px;font-size:24px;">SignPresenter Support</h1></td>
+        <td style="text-align:right">
+          <h1 style="margin-top:7px;font-size:24px;">SignPresenter Support</h1>
+        </td>
       </tr>
     </table>
   </header>
